<resources>
    <string name="app_name">Practica2</string>

    <string name="add_height">Add Height</string>
    <string name="write_height_cm">Add Height in cm</string>
    <string name="add_weight">Add Weight</string>
    <string name="write_weight_kg">Add Weight in cm</string>
    <string name="calc_imc">Calculate IMC</string>>

    <string name="result_message">All OK %f</string>
    <string name="error_message">ERROR</string>>

    //Result Activity
    <string name="body_mass_index">Body Mass Index</string>

    <string name="less_than_18_5">  Less than 18,5</string>
    <string name="under_weight">Under Weight</string>

    <string name="between18_5_and_24_9">18,5 - 24,9</string>
    <string name="normal_weight">Normal Weight</string>

    <string name="between25_and_29_9">25 - 29,9</string>
    <string name="overweight">Overweight</string>

    <string name="between30_and_34_9">30 - 34,9</string>
    <string name="class1_obesity">Class 1 Obesity</string>

    <string name="between35_and_39_9">35 - 39,9</string>
    <string name="class2_obesity">Class 2 Obesity</string>

    <string name="more_than_40"> Over 40</string>
    <string name="class3_obesity">Class 3 Obesity</string>

</resources>