<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".MainActivity">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:text="@string/add_height"
            android:textSize="20dp" />
        <EditText
            android:id="@+id/user_height"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:padding="20dp"
            android:hint="@string/write_height_cm" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:text="@string/add_weight"
            android:textSize="20dp" />
        <EditText
            android:id="@+id/user_weight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:padding="20dp"
            android:hint="@string/write_weight_kg" />
        <TextView
            android:id="@+id/text_result"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:textSize="20dp" />
        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="@string/calc_imc" />
    </LinearLayout>
</layout>